--- a/070922/index.html
+++ b/070922/index.html
@@ -16,6 +16,6 @@
      Proin quis erat varius justo <span name="pole"> imperdiet euismod eu eget quam. Ut dignissim, lectus ac lacinia vulputate,</span> ex elit sagittis mauris, 
      sed porttitor odio risus et justo. Morbi ornare nisi mauris, id eleifend purus condimentum nec. Nunc feugiat id urna vitae facilisis.</p>
 
-     <span>Dowoly txt</span>
+     <span>Dowolny txt</span>
 </body>
 </html>
