--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 <center>
 <p style="font-size: 36px;">Wpisz dzień, miesiąc i rok w pasku wyszukiwania żeby przejść do konkretnego projektu</p>
+<p style="font-size: 30px;">w formacie np. 060922</p>
 </center>
 </body>
 </html>
