--- a/index.html
+++ b/index.html
@@ -4,12 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projekty Szkolne</title>
+    <title>Model blokowy?</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<center>
-<p style="font-size: 36px;">Wpisz dzień, miesiąc i rok w pasku wyszukiwania żeby przejść do konkretnego projektu</p>
-<p style="font-size: 30px;">w formacie np. 060922</p>
-</center>
+    <p id="p1">
+        Curabitur aliquet ornare elit quis vulputate. Integer vestibulum eros vel urna lobortis, a vehicula sapien 
+        </p>
+
+        <p id="p2">
+            Curabitur aliquet ornare elit quis vulputate. Integer vestibulum eros vel urna lobortis, a vehicula sapien 
+            </p>
+
+            <p id="p3">
+                Curabitur aliquet ornare elit quis vulputate. Integer vestibulum eros vel urna lobortis, a vehicula sapien 
+                </p>   
+                
+                <p id="p4">
+                    Curabitur aliquet ornare elit quis vulputate. Integer vestibulum eros vel urna lobortis, a vehicula sapien 
+                    </p>
 </body>
 </html>
