--- a/051022/uwuwewle.html
+++ b/051022/uwuwewle.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Flex boxy</title>
-	<style type="text/css"></style>
+	<style type="text/css">
 
 .flex-container {
   background-color: gray;
@@ -14,7 +14,7 @@
   background-color: red;
   border: 1px black solid;
 }
-
+</style>
 </head>
 
 <body>
