--- a/091122/idiota/index.html
+++ b/091122/idiota/index.html
@@ -18,17 +18,16 @@
 		<div id="container">
 
 			<div id="LewyPanel">
-				<div>
-                    </div>
-                <div>
+				<div class="pierwszyzlewych"></div>
+                <div class="drugizlewych">
                     </div>
 			</div>
 
 			<div id="Mpanel">
-				<div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+				<div><br>1</div>
+                <div><br>2</div>
+                <div><br>3</div>
+                <div><br>4</div>
 			</div>
 			<div id="PrawyPanel">                 
                     <ol type="1">
