--- a/221116/index.html
+++ b/221116/index.html
@@ -14,18 +14,18 @@
 
 <!-- 
 Transition 
-transiton property - animacjka ktora bierze udział w 
+transiton property - animacjka ktora bierze udział w animacji
 transiton duration - czas trwania przejścia
-transiton timing-function
+transiton timing-function - tempo przejscia
                         linerar - stała
                         ease-in - wolno na poczatku
                         ease-out - wolno na koncu
 transiton-delay - opoznienie pewnie
 
-przedrostki zeby dobrze dzialay naimacje
--o-
--webkit-
--moz-
+przedrostki zeby dobrze dzialay animacje na roznych przegladarkach
+-o-             opera
+-webkit-        chorme
+-moz-           płomienny lis
 
 
 
