--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
             font-family: sans-serif;}
         .gruch{color: #2b2b2b;}
 p{font-size: 36px; color: #dfdfdf; text-align: center;}
+a:link{text-decoration: none; color: #dfdfdf;}
     </style>
 </head>
 <body>
 <p>Wpisz dzień, miesiąc i rok w pasku wyszukiwania żeby przejść do konkretnego projektu</p>
 <p>w formacie np. 221130</p>
-<p><a href="https://github.com/rotkiW285/SchoolProjects"> Pobierz projekt</a>></p>
+<p><a href="https://github.com/rotkiW285/SchoolProjects"> Pobierz projekt </a></p>
 <p style="color: red;">NASTĄPIŁA ZMIANA SYSTEMU DAT NA ROK/MIESIĄC/DZIEŃ</p>
 <p class="gruch">#FREEMECHANIK</p>
 </body>
