--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ a:link{color: #dfdfdf;}
 <body>
 <p>Wpisz dzień, miesiąc i rok w pasku wyszukiwania żeby przejść do konkretnego projektu</p>
 <p>w formacie np. 221130</p>
-<p><a href="https://github.com/rotkiW285/SchoolProjects"> Pobierz jeden z projektów </a></p>
+<p><a href="https://github.com/rotkiW285/SchoolProjects" target="blank"> Pobierz jeden z projektów </a></p>
 <p style="color: red;">NASTĄPIŁA ZMIANA SYSTEMU DAT NA ROK/MIESIĄC/DZIEŃ</p>
 <p class="gruch">#FREEMECHANIK</p>
 </body>
