--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
 <link rel="manifest" href="site.webmanifest">
     <style>
-        html{
-            background-color: #2b2b2b;
-            font-family: sans-serif;}
-        .gruch{color: #2b2b2b;}
+html{
+    background-color: #2b2b2b;
+    font-family: sans-serif;}
+.gruch{color: #2b2b2b;}
 p{font-size: 36px; color: #dfdfdf; text-align: center;}
-a:link{color: #dfdfdf;}
+a:link, a:visited{color: #dfdfdf;}
     </style>
 </head>
 <body>
