--- a/221213/index.html
+++ b/221213/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     
-<div id="id1"></div>
-
+<div id="id1" class="jeden"></div>
+<div id="id2" class="dwa"></div>
+<div id="id1" class="trzy"></div>
+<div id="id2" class="cztery"></div>
 </body>
 </html>
 <!--
