--- a/221216/index.html
+++ b/221216/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="body">
         <span id="head">FAJNA FURKA CO NIE?<br> CHODŹ I KUP TERAZ!</span>
-        <img src="auto.png" id="auto">
+        <img src="auto.png" id="piwo">
         <div id="main">
             <div id="tekst">Przebieg do uzgodnienia!</div>
         </div>
