--- a/221216/index.html
+++ b/221216/index.html
@@ -9,11 +9,10 @@
 </head>
 <body>
     <div id="body">
-        <span id="head">FAJNA FURKA CO NIE?<br> CHODŹ I KUP TERAZ!</span>
-        <img src="auto.png" id="piwo">
-        <div id="main">
-            <div id="tekst">Przebieg do uzgodnienia!</div>
-        </div>
+        <span id="head">CHCESZ FAJNOM<br>FURKE CO NIE?<br> CHODŹ I KUP TERAZ!</span>
+        <img src="auto.png" id="auto">
+        <div id="main"><div id="tekst">Przebieg do uzgodnienia!</div><br></div>
+        <div id="polecam">Polecam,<br>Grzegorz Brzeczyszczykiewicz</div>
     </div>
 </body>
 </html>
