--- a/221216/index.html
+++ b/221216/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="body">
         <span id="head">CHCESZ FAJNOM<br>FURKE CO NIE?<br> CHODŹ I KUP TERAZ!</span>
-        <img src="auto.png" id="auto">
+        <a href="https://www.mercedes-benz.pl/" target="_blank"><img src="auto.png" id="auto"></a>
         <div id="main"><div id="tekst">Przebieg do uzgodnienia!</div><br></div>
         <div id="polecam">Polecam,<br>Grzegorz Brzeczyszczykiewicz</div>
     </div>
