--- a/230102/index.html
+++ b/230102/index.html
@@ -13,10 +13,11 @@
 
 </div>
 
-<p>Wszystkiego najlepszego życzy dyrekcja ZSTIO</p>
-
+<p class="jeden">Wszystkiego najlepszego życzy xyz</p>
 
 <img src="mikolaj.png" class="miko">
+
+<div class="img-right"><img src="drzewo.png"></div>
 
 </body>
 </html>
