--- a/230102/index.html
+++ b/230102/index.html
@@ -10,14 +10,20 @@
 <body>
     
 <div class="navi">
-
+<a href="https://dd.pl"></a>
 </div>
 
-<p class="jeden">Wszystkiego najlepszego życzy xyz</p>
+<div onclick="location.href='YOUR-URL-HERE';" style="cursor: pointer;"></div>
+
+<p class="zyczy">Wszystkiego najlepszego życzy xyz</p>
 
 <img src="mikolaj.png" class="miko">
 
-<div class="img-right"><img src="drzewo.png"></div>
+<div class="imgright"><img src="drzewo.png"></div>
+
+<img src="snowflake.png" class="snowflake">
+
+
 
 </body>
 </html>
