--- a/230102/index.html
+++ b/230102/index.html
@@ -10,10 +10,7 @@
 <body>
     
 <div class="navi">
-<a href="https://dd.pl"></a>
-</div>
-
-<div onclick="location.href='YOUR-URL-HERE';" style="cursor: pointer;"></div>
+<a href="https://mechaniktg.pl" target="_blank"><img src="gura.jpg"></a></div>
 
 <p class="zyczy">Wszystkiego najlepszego życzy xyz</p>
 
