--- a/230130/index.html
+++ b/230130/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Neon Love</title>
     <link rel="stylesheet" href="style.css">
-    <script> src="script.js" </script>
+    <script src="script.js"></script>
 </head>
 <body>
   <canvas id="canvas" width="1400" height="600"></canvas>
