--- a/230130/index.html
+++ b/230130/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neon Love</title>
+    <title>31.01.23</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
 </head>
 <body>
-  <canvas id="canvas" width="1400" height="600"></canvas>
+
+<div id="container">
+<div class="green flex-item">1</div>
+<div class="blue flex-item">2</div>
+<div class="yellow flex-item">3</div>
+<div class="flex-item">4</div>
+</div>
+
 </body>
 </html>
