--- a/230131/index.html
+++ b/230131/index.html
@@ -4,17 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>31.01.23</title>
-    <link rel="stylesheet" href="style.css">
+    <title>31.01.2023</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="container">
+        <div class="green flex-item">1</div>
+        <div class="blue flex-item">2</div>
+        <div class="yellow flex-item">3</div>
+        <div class="red flex-item">4</div>
 
-<div id="container">
-<div class="green flex-item">1</div>
-<div class="blue flex-item">2</div>
-<div class="yellow flex-item">3</div>
-<div class="flex-item">4</div>
-</div>
-
+    </div>
 </body>
 </html>
+
+<!-- 
+wszystko co robilmy jest na stronie
+https://basement-code.pl/2018/02/css-dla-poczatkujacych-flexbox/
+-->
