--- a/230207/index.html
+++ b/230207/index.html
@@ -9,38 +9,45 @@
 </head>
 <body>
     
-<nav>
-    <div class="divblocks"></div>
-    <div class="divblocks"></div>
-    <div class="divblocks"></div>
-    <div class="divblocks"></div>
-</nav>
+<div id="nav">
+    <div class="navblocks"></div>
+    <div class="navblocks"></div>
+    <div class="navblocks"></div>
+    <div class="navblocks"></div>
+</div>
 
-<section>
+
+
+<div id="section">
+
 <div class="sleft">
+    <!-- <div class="inleft"></div>
     <div class="inleft"></div>
-    <div class="inleft"></div>
-    <div class="inleft"></div>
+    <div class="inleft"></div> -->
 </div>
 
 <div class="sright">
+    <!-- <div class="inright"></div>
     <div class="inright"></div>
     <div class="inright"></div>
-    <div class="inright"></div>
-    <div class="inright"></div>
+    <div class="inright"></div> -->
 </div>
 
+</div><!-- koniec sekcji -->
+
+<div id="undersec">
 <div class="unders"></div>
+<div class="unders"></div>
+</div>
 
-</section>
 
-    <footer>
+
+
+
+    <!-- <div id="footer">
         <div class="foot"></div>
         <div class="foot"></div>
-    </footer>
-
-
-
+    </div> -->
 
 
 </body>
