--- a/230207/index.html
+++ b/230207/index.html
@@ -21,9 +21,9 @@
 <div id="section">
 
 <div class="sleft">
-    <!-- <div class="inleft"></div>
     <div class="inleft"></div>
-    <div class="inleft"></div> -->
+    <div class="inleft"></div>
+    <div class="inleft"></div>
 </div>
 
 <div class="sright">
@@ -41,14 +41,10 @@
 </div>
 
 
-
-
-
-    <!-- <div id="footer">
+<div id="footer">
         <div class="foot"></div>
         <div class="foot"></div>
-    </div> -->
-
+    </div>
 
 </body>
 </html>
