--- a/230207/index.html
+++ b/230207/index.html
@@ -27,10 +27,10 @@
 </div>
 
 <div class="sright">
-    <!-- <div class="inright"></div>
     <div class="inright"></div>
     <div class="inright"></div>
-    <div class="inright"></div> -->
+    <div class="inright"></div>
+    <div class="inright"></div>
 </div>
 
 </div><!-- koniec sekcji -->
