--- a/230207/index.html
+++ b/230207/index.html
@@ -27,10 +27,14 @@
 </div>
 
 <div class="sright">
-    <div class="inright"></div>
-    <div class="inright"></div>
-    <div class="inright"></div>
-    <div class="inright"></div>
+    <div class="column">
+        <div class="inright"></div>
+        <div class="inright"></div>    
+    </div>
+    <div class="column">
+            <div class="inright"></div>
+        <div class="inright"></div>        
+    </div> 
 </div>
 
 </div><!-- koniec sekcji -->
