--- a/221118/index.html
+++ b/221118/index.html
@@ -14,9 +14,9 @@
     </style>
 </head>
 <body>
-    Tutaj są tylko 2 pliki python z kamień papier nożyce
+    Tutaj są tylko 2 pliki python z kamień papier nożyce<br>
 
-<a href="kamienpapierzonyce.py">Mój</a>
+<a href="kamienpapierzonyce.py">Mój</a><br>
 <a href="papier kamien nozyce ale ukradzione z kompa szkolnego.py">Ukradziony z szkolnego kompa</a>
 </body>
 </html>
