--- a/220921/index.html
+++ b/220921/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>21.09.22</title>
+    <style>
+        a, a:link{
+        text-decoration: none;
+        color: blue;
+            
+        }
+    </style>
 </head>
 <body>
-    <p>Tego dnia była stworzona baza projektu który jest wrzucony w dzień 221114</p>
+<a href="210922.py">210922.py</a>
 </body>
 </html>
