--- a/230214/index.html
+++ b/230214/index.html
@@ -4,30 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>14.02.2023</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
 <div class="nav">
-    <div class="nav-element"></div>
-    <div class="nav-element"></div>
+    <div class="nav-element"> <a href="index.html">Index</a></div>
+    <div class="nav-element"><a href="index2.html">Index2</a></div>
     <div class="nav-element"></div>
     <div class="nav-element"></div>
 </div>
 <div class="obraz"></div>
 
 <div class="main">
-<div class="left-main"></div>
+<div class="left-main">
+    <div class="in-left-main"></div>
+    <div class="in-left-main"></div>
+    <div class="in-left-main"></div>
+    <div class="in-left-main"></div>
+</div>
+
 <div class="right-main">
-    <div class="in-right-main"></div>
-    <div class="in-right-main"></div>
-    <div class="in-right-main"></div>
-</div>
+    <div class="in-right-main">
+        <div class="in-right-col ring"></div>
+        <div class="in-right-col"></div>
+        <div class="in-right-col"></div>
+        <div class="in-right-col"></div>
+    </div>
+
+    <div class="in-right-main">
+        <div class="in-right-col ring"></div>
+        <div class="in-right-col"></div>
+        <div class="in-right-col"></div>
+        <div class="in-right-col"></div>
+    </div>
+
+    <div class="in-right-main">
+        <div class="in-right-col ring"></div>
+        <div class="in-right-col"></div>
+        <div class="in-right-col"></div>
+        <div class="in-right-col"></div>
+    </div>
 
 </div>
 
-<div class="footer"></div>
+</div>
+
+<div class="footer"><p>Wykonał: Wiktor Stawicki</p></div>
 
 </body>
 </html>
