--- a/230214/index.html
+++ b/230214/index.html
@@ -12,8 +12,8 @@
 <div class="nav">
     <div class="nav-element"> <a href="index.html">Index</a></div>
     <div class="nav-element"><a href="index2.html">Index2</a></div>
-    <div class="nav-element"></div>
-    <div class="nav-element"></div>
+    <div class="nav-element"><a href="https://sekurak.pl/" target="_blank">Sekurak</a></div>
+    <div class="nav-element"><a href="https://niebezpiecznik.pl/" target="_blank">Niebezpiecznik</a></div>
 </div>
 <div class="obraz"></div>
 
@@ -27,24 +27,24 @@
 
 <div class="right-main">
     <div class="in-right-main">
-        <div class="in-right-col ring"></div>
-        <div class="in-right-col"></div>
-        <div class="in-right-col"></div>
-        <div class="in-right-col"></div>
+        <div class="in-right-col ring ring1"></div>
+        <div class="in-right-col">Yubikey</div>
+        <div class="in-right-col">Google Titan</div>
+        <div class="in-right-col">Hyperfido</div>
     </div>
 
     <div class="in-right-main">
-        <div class="in-right-col ring"></div>
-        <div class="in-right-col"></div>
-        <div class="in-right-col"></div>
-        <div class="in-right-col"></div>
+        <div class="in-right-col ring ring2"></div>
+        <div class="in-right-col">Silne hasła</div>
+        <div class="in-right-col">TOTP</div>
+        <div class="in-right-col">Szyfrowanie danych</div>
     </div>
 
     <div class="in-right-main">
-        <div class="in-right-col ring"></div>
-        <div class="in-right-col"></div>
-        <div class="in-right-col"></div>
-        <div class="in-right-col"></div>
+        <div class="in-right-col ring ring3"></div>
+        <div class="in-right-col">Malware</div>
+        <div class="in-right-col">Phising</div>
+        <div class="in-right-col">Ransomware</div>
     </div>
 
 </div>
