--- a/230214/index.html
+++ b/230214/index.html
@@ -10,41 +10,62 @@
 <body>
     
 <div class="nav">
-    <div class="nav-element"> <a href="index.html">Index</a></div>
-    <div class="nav-element"><a href="index2.html">Index2</a></div>
-    <div class="nav-element"><a href="https://sekurak.pl/" target="_blank">Sekurak</a></div>
-    <div class="nav-element"><a href="https://niebezpiecznik.pl/" target="_blank">Niebezpiecznik</a></div>
+    <div class="nav-element"> <p><a href="index.html">Index</a></p></div>
+    <div class="nav-element"> <p><a href="index2.html">Index2</a></p></div>
+    <div class="nav-element"> <p><a href="https://sekurak.pl/" target="_blank">Sekurak</a></p></div>
+    <div class="nav-element"> <p><a href="https://niebezpiecznik.pl/" target="_blank">Niebezpiecznik</a></p></div>
 </div>
 <div class="obraz"></div>
 
 <div class="main">
 <div class="left-main">
-    <div class="in-left-main"></div>
-    <div class="in-left-main"></div>
-    <div class="in-left-main"></div>
-    <div class="in-left-main"></div>
+    <div class="in-left-main"><p>1</p></div>
+    <div class="in-left-main"><p>2</p></div>
+    <div class="in-left-main"><p>3</p></div>
+    <div class="in-left-main"><p>4</p></div>
 </div>
 
 <div class="right-main">
     <div class="in-right-main">
         <div class="in-right-col ring ring1"></div>
-        <div class="in-right-col">Yubikey</div>
-        <div class="in-right-col">Google Titan</div>
-        <div class="in-right-col">Hyperfido</div>
+        <div class="in-right-col">
+            Klucze U2F to jedyne dostępne obecnie na rynku rozwiązanie, 
+            które całkowicie chroni przed skutkami phishingu. To bardzo popularna w
+             ostatnim czasie metoda stosowana przez oszustów. Polega na wyłudzeniu danych 
+             (na przykład haseł i loginów do kont w mediach społecznościowych, kont bankowych) 
+             dzięki podszyciu się pod znane serwisy i budzące zaufanie instytucje. Wystarczy, 
+             że otrzymasz na maila korespondencję do złudzenia przypominającą znaną Ci stronę i, 
+             myśląc że logujesz się do znanego serwisu, sam podasz oszustom swoje dane.
+
+        </div>
+
     </div>
 
     <div class="in-right-main">
         <div class="in-right-col ring ring2"></div>
-        <div class="in-right-col">Silne hasła</div>
-        <div class="in-right-col">TOTP</div>
-        <div class="in-right-col">Szyfrowanie danych</div>
+        <div class="in-right-col">Mocne hasło – hasło dostępu do np. danych,
+             które cechuje się zmniejszonym prawdopodobieństwem "złamania" lub odgadnięcia,
+              poprzez m.in. zwiększenie liczby znaków potrzebnych do jego podania i ułożenia 
+              ich w kolejność, która uniemożliwi atak słownikowy.<br>
+              Silne hasło zawiera:
+              Co najmniej 6 znaków (im więcej znaków, tym silniejsze hasło)
+              Zawiera kombinację liter, cyfr i symboli.
+              Cyfry od 0 do 9
+              Symbole (przykład: !"£$%^*&*)
+              Litery (od A do Z)            
+            
+            </div>
     </div>
 
     <div class="in-right-main">
         <div class="in-right-col ring ring3"></div>
-        <div class="in-right-col">Malware</div>
-        <div class="in-right-col">Phising</div>
-        <div class="in-right-col">Ransomware</div>
+        <div class="in-right-col">Wirus komputerowy – program komputerowy posiadający zdolność powielania się, 
+            tak jak prawdziwy wirus, stąd jego nazwa. Wirus do swojego działania potrzebuje i wykorzystuje 
+            system operacyjny, aplikacje oraz tożsamość użytkownika komputera.
+            Wirusa komputerowego zalicza się do szkodliwego oprogramowania (malware). 
+            Do zwalczania wirusów komputerowych stosuje się programy antywirusowe i skanery 
+            wykrywające szkodliwe oprogramowanie.
+        </div>
     </div>
 
 </div>
