--- a/230214/index2.html
+++ b/230214/index2.html
@@ -4,47 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INDEX2</title>
+    <title>INDEKS DRUGI, JP2 PALI SZLUGI</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
 <div class="nav">
-    <div class="nav-element"> <a href="index.html">Index</a></div>
-    <div class="nav-element"><a href="index2.html">Index2</a></div>
-    <div class="nav-element"><a href="https://sekurak.pl/" target="_blank">Sekurak</a></div>
-    <div class="nav-element"><a href="https://niebezpiecznik.pl/" target="_blank">Niebezpiecznik</a></div>
+    <div class="nav-element"> <p><a href="index.html">Index</a></p></div>
+    <div class="nav-element"> <p><a href="index2.html">Index2</a></p></div>
+    <div class="nav-element"> <p><a href="https://sekurak.pl/" target="_blank">Sekurak</a></p></div>
+    <div class="nav-element"> <p><a href="https://niebezpiecznik.pl/" target="_blank">Niebezpiecznik</a></p></div>
 </div>
 <div class="obraz"></div>
 
 <div class="main">
 <div class="left-main">
-    <div class="in-left-main"></div>
-    <div class="in-left-main"></div>
-    <div class="in-left-main"></div>
-    <div class="in-left-main"></div>
+    <div class="in-left-main"><p>1</p></div>
+    <div class="in-left-main"><p>2</p></div>
+    <div class="in-left-main"><p>3</p></div>
+    <div class="in-left-main"><p>4</p></div>
 </div>
 
 <div class="right-main">
     <div class="in-right-main">
-        <div class="in-right-col ring ring1"></div>
-        <div class="in-right-col">Yubikey</div>
-        <div class="in-right-col">Google Titan</div>
-        <div class="in-right-col">Hyperfido</div>
+        <div class="in-right-col ring ring4"></div>
+        <div class="in-right-col">
+            Koń trojański, trojan – określenie oprogramowania, które podszywając
+             się pod przydatne lub ciekawe dla użytkownika aplikacje, dodatkowo 
+             implementuje niepożądane, ukryte przed użytkownikiem różne funkcje 
+             (oprogramowanie wymuszające okup – ransomware[1], szpiegujące – spyware, 
+             bomby logiczne, furtki umożliwiające przejęcie kontroli nad systemem przez 
+             nieuprawnione osoby itp.). Nazwa pochodzi od mitologicznego konia trojańskiego.
+
+        </div>
+
     </div>
 
     <div class="in-right-main">
-        <div class="in-right-col ring ring2"></div>
-        <div class="in-right-col">Silne hasła</div>
-        <div class="in-right-col">TOTP</div>
-        <div class="in-right-col">Szyfrowanie danych</div>
+        <div class="in-right-col ring ring5"></div>
+        <div class="in-right-col">Ransomware (zbitka słów ang. ransom „okup” i software 
+            „oprogramowanie”) – oprogramowanie, które blokuje dostęp do systemu komputerowego
+             lub uniemożliwia odczyt zapisanych w nim danych (często poprzez techniki szyfrujące), 
+             a następnie żąda od ofiary okupu za przywrócenie stanu pierwotnego. Programy typu
+              ransomware należą do tzw. złośliwego oprogramowania (malware).
+            
+            </div>
     </div>
 
     <div class="in-right-main">
-        <div class="in-right-col ring ring3"></div>
-        <div class="in-right-col">Malware</div>
-        <div class="in-right-col">Phising</div>
-        <div class="in-right-col">Ransomware</div>
+        <div class="in-right-col ring ring6"></div>
+        <div class="in-right-col">z
+        </div>
     </div>
 
 </div>
