--- a/230214/index2.html
+++ b/230214/index2.html
@@ -53,7 +53,11 @@
 
     <div class="in-right-main">
         <div class="in-right-col ring ring6"></div>
-        <div class="in-right-col">z
+        <div class="in-right-col">Phishing – metoda oszustwa, w której przestępca podszywa 
+            się pod inną osobę lub instytucję w celu wyłudzenia poufnych informacji
+            (np. danych logowania, danych karty kredytowej), zainfekowania komputera
+             szkodliwym oprogramowaniem czy też nakłonienia ofiary do określonych 
+             działań. Jest to rodzaj ataku opartego na inżynierii społecznej.
         </div>
     </div>
 
