--- a/230214/index.html
+++ b/230214/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>14.02.2023</title>
+    <title>BEZPIECZEŃSTWO W INTERNECIE</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
 <div class="nav">
-    <div class="nav-element"> <p><a href="index.html">Index</a></p></div>
-    <div class="nav-element"> <p><a href="index2.html">Index2</a></p></div>
+    <div class="nav-element"> <p><a href="index.html">BWI</a></p></div>
+    <div class="nav-element"> <p><a href="index2.html">RWK</a></p></div>
     <div class="nav-element"> <p><a href="https://sekurak.pl/" target="_blank">Sekurak</a></p></div>
     <div class="nav-element"> <p><a href="https://niebezpiecznik.pl/" target="_blank">Niebezpiecznik</a></p></div>
 </div>
@@ -19,10 +19,10 @@
 
 <div class="main">
 <div class="left-main">
-    <div class="in-left-main"><p>1</p></div>
-    <div class="in-left-main"><p>2</p></div>
-    <div class="in-left-main"><p>3</p></div>
-    <div class="in-left-main"><p>4</p></div>
+    <div class="in-left-main"><p>Kup Yubikey</p></div>
+    <div class="in-left-main"><p>Kup Google Titan</p></div>
+    <div class="in-left-main"><p>Kup niewolnika</p></div>
+    <div class="in-left-main"><p>hehe</p></div>
 </div>
 
 <div class="right-main">
