--- a/230214/index2.html
+++ b/230214/index2.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INDEKS DRUGI, JP2 PALI SZLUGI</title>
+    <title>RODZAJE WIRUSÓW KOMPUTEROWYCH</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
 <div class="nav">
-    <div class="nav-element"> <p><a href="index.html">Index</a></p></div>
-    <div class="nav-element"> <p><a href="index2.html">Index2</a></p></div>
-    <div class="nav-element"> <p><a href="https://sekurak.pl/" target="_blank">Sekurak</a></p></div>
+    <div class="nav-element"> <p><a href="index.html">BWI</a></p></div>
+    <div class="nav-element"> <p><a href="index2.html">RWK</a></p></div>
+    <div class="nav-element"> <p><a href="https://www.datalab.pl/" target="_blank">Odzyskiwanie Danych</a></p></div>
     <div class="nav-element"> <p><a href="https://niebezpiecznik.pl/" target="_blank">Niebezpiecznik</a></p></div>
 </div>
-<div class="obraz"></div>
+<div class="obraz2"></div>
 
 <div class="main">
 <div class="left-main">
-    <div class="in-left-main"><p>1</p></div>
-    <div class="in-left-main"><p>2</p></div>
-    <div class="in-left-main"><p>3</p></div>
-    <div class="in-left-main"><p>4</p></div>
+    <div class="in-left-main"><p>Wirusy Dyskowe</p></div>
+    <div class="in-left-main"><p>Wirusy Plikowe</p></div>
+    <div class="in-left-main"><p>Wirusy Skryptowe</p></div>
+    <div class="in-left-main"><p>Wirusy Telefonów</p></div>
 </div>
 
 <div class="right-main">
