--- a/230214/index.html
+++ b/230214/index.html
@@ -21,8 +21,8 @@
 <div class="left-main">
     <div class="in-left-main"><p>Kup Yubikey</p></div>
     <div class="in-left-main"><p>Kup Google Titan</p></div>
-    <div class="in-left-main"><p>Kup niewolnika</p></div>
-    <div class="in-left-main"><p>hehe</p></div>
+    <div class="in-left-main"><p>Kup Herome</p></div>
+    <div class="in-left-main"><p>Kup Juaeu</p></div>
 </div>
 
 <div class="right-main">
@@ -34,8 +34,7 @@
              ostatnim czasie metoda stosowana przez oszustów. Polega na wyłudzeniu danych 
              (na przykład haseł i loginów do kont w mediach społecznościowych, kont bankowych) 
              dzięki podszyciu się pod znane serwisy i budzące zaufanie instytucje. Wystarczy, 
-             że otrzymasz na maila korespondencję do złudzenia przypominającą znaną Ci stronę i, 
-             myśląc że logujesz się do znanego serwisu, sam podasz oszustom swoje dane.
+             że otrzymasz na maila korespondencję do złudzenia przypominającą znaną Ci stronę.
 
         </div>
 
