--- a/innestrony.html
+++ b/innestrony.html
@@ -276,6 +276,12 @@
     <p>IS51 - Luksemburg (2ga mapa)</p>
     <p><a href="zip/is51.zip" download>Pobierz</a></p></div>
 
+    <div class="gallery">
+    <a target="_blank" href="innestrony/is52/index.html">
+    <img src="img/is52.webp" loading="lazy"></a>
+    <p>IS52 - Kalkulator JS (ChatGPT)</p>
+    <p><a href="zip/is52.zip" download>Pobierz</a></p></div>
+
 
 
 
