--- a/innestrony.html
+++ b/innestrony.html
@@ -282,6 +282,18 @@
     <p>IS52 - Kalkulator JS (ChatGPT)</p>
     <p><a href="zip/is52.zip" download>Pobierz</a></p></div>
 
+    <div class="gallery">
+    <a target="_blank" href="innestrony/is53/index.html">
+    <img src="img/is53.webp" loading="lazy"></a>
+    <p>IS53 - Grid Bawilandia</p>
+    <p><a href="zip/is53.zip" download>Pobierz</a></p></div>
+
+    <div class="gallery">
+    <a target="_blank" href="innestrony/is54/index.html">
+    <img src="img/is54.webp" loading="lazy"></a>
+    <p>IS54 - Grid (?)</p>
+    <p><a href="zip/is54.zip" download>Pobierz</a></p></div>
+
 
 
 
