--- a/index.html
+++ b/index.html
@@ -226,6 +226,12 @@
     <p>03.04.23</p>
     <p><a href="zip/230403.zip" download>Pobierz</a></p></div>
 
+    <div class="gallery">
+    <a target="_blank" href="230404/index.html">
+    <img src="img/test.webp" loading="lazy"></a>
+    <p>04.04.23</p>
+    <p><a href="zip/230404.zip" download>Pobierz</a></p></div>
+
 
 
 
