--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
     <div class="gallery">
     <a target="_blank" href="230404/index.html">
-    <img src="img/test.webp" loading="lazy"></a>
+    <img src="img/230404.webp" loading="lazy"></a>
     <p>04.04.23</p>
     <p><a href="zip/230404.zip" download>Pobierz</a></p></div>
 
