--- a/innestrony.html
+++ b/innestrony.html
@@ -93,7 +93,7 @@
     <div class="gallery">
     <a target="_blank" href="innestrony/is15/index.html">
     <img src="img/is15.webp" loading="lazy"></a>
-    <p>IS15 - Smooth (4 kwadraty płynnie się obracające)</p>
+    <p>IS15 - Smooth (4 kwadraty się obracające)</p>
     <p><a href="zip/is15.zip" download>Pobierz</a></p></div>
 
     <div class="gallery">
@@ -293,6 +293,12 @@
     <img src="img/is54.webp" loading="lazy"></a>
     <p>IS54 - Grid (?)</p>
     <p><a href="zip/is54.zip" download>Pobierz</a></p></div>
+
+    <div class="gallery">
+        <a target="_blank" href="innestrony/is55/index.html">
+        <img src="img/is55.webp" loading="lazy"></a>
+        <p>IS55 - J*bać kolejówke (Grid)</p>
+        <p><a href="zip/is55.zip" download>Pobierz</a></p></div>
 
 
 
