--- a/zdjecia.html
+++ b/zdjecia.html
@@ -38,6 +38,10 @@
         <a href="inne/DSC_0138.jpg" download>
         <img src="inne/DSC_0138.jpg" loading="lazy"></a></div>
 
+        <div class="gallery">
+            <a href="inne/zadanie1gimp.png" download>
+            <img src="inne/zadanie1gimp.png" loading="lazy"></a></div>
+
 
 </body>
 </html>
