--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     <div class="gallery">
     <a target="_blank" href="230214/index.html">
     <img src="img/230214.webp" loading="lazy"></a>
-    <p>14.02.23</p>
+    <p>14.02.23 - FlexBox</p>
     <p><a href="zip/230214.zip" download>Pobierz</a></p></div>
 	
 	<div class="gallery">
@@ -231,6 +231,13 @@
     <img src="img/230404.webp" loading="lazy"></a>
     <p>04.04.23</p>
     <p><a href="zip/230404.zip" download>Pobierz</a></p></div>
+
+    <div class="gallery">
+    <a target="_blank" href="230418/index.html">
+    <img src="img/test.webp" loading="lazy"></a>
+    <p>18.04.23</p>
+    <p><a href="zip/230418.zip" download>Pobierz</a></p></div> 
+    <!-- dodac zipa i img -->
 
 
 
