--- a/index.html
+++ b/index.html
@@ -234,11 +234,9 @@
 
     <div class="gallery">
     <a target="_blank" href="230418/index.html">
-    <img src="img/test.webp" loading="lazy"></a>
+    <img src="img/230418.webp" loading="lazy"></a>
     <p>18.04.23</p>
     <p><a href="zip/230418.zip" download>Pobierz</a></p></div> 
-    <!-- dodac zipa i img -->
-
 
 
 
