--- a/index.html
+++ b/index.html
@@ -238,6 +238,13 @@
     <p>18.04.23</p>
     <p><a href="zip/230418.zip" download>Pobierz</a></p></div> 
 
+    <div class="gallery">
+    <a target="_blank" href="230419/index.html">
+    <img src="img/test.webp" loading="lazy"></a>
+    <p>19.04.23</p>
+    <p><a href="zip/230419.zip" download>Pobierz</a></p></div> 
+    <!-- brak zip -->
+
 
 
 </body>
