--- a/230419/index.html
+++ b/230419/index.html
@@ -10,27 +10,27 @@
 <body>
     
 <div id="container">
-    <div class="grid-item" id="g1">1</div>
-    <div class="grid-item" id="g2">1</div>
-    <div class="grid-item" id="g3">1</div>
-    <div class="grid-item" id="g4">1</div>
-    <div class="grid-item" id="g5">1</div>
-    <div class="grid-item" id="g6">1</div>
-    <div class="grid-item" id="g7">1</div>
-    <div class="grid-item" id="g8">1</div>
-    <div class="grid-item" id="g9">1</div>
-    <div class="grid-item" id="g10">1</div>
-    <div class="grid-item" id="g11">1</div>
-    <div class="grid-item" id="g12">1</div>
-    <div class="grid-item" id="g13">1</div>
-    <div class="grid-item" id="g14">1</div>
-    <div class="grid-item" id="g15">1</div>
-    <div class="grid-item" id="g16">1</div>
-    <div class="grid-item" id="g17">1</div>
-    <div class="grid-item" id="g18">1</div>
-    <div class="grid-item" id="g19">1</div>
-    <div class="grid-item" id="g20">1</div>
-    <div class="grid-item" id="g21">1</div>
+    <div class="grid-item" id="g1">link</div>
+    <div class="grid-item" id="g2">link2</div>
+    <div class="grid-item" id="g3">link3</div>
+    <div class="grid-item" id="g4">link4</div>
+    <div class="grid-item" id="g5">link5</div>
+    <div class="grid-item" id="g6">tlo obrazkowe</div>
+    <div class="grid-item" id="g7">art1</div>
+    <div class="grid-item" id="g8">art2</div>
+    <div class="grid-item" id="g9">art3</div>
+    <div class="grid-item" id="g10">10</div>
+    <div class="grid-item" id="g11">11</div>
+    <div class="grid-item" id="g12">12</div>
+    <div class="grid-item" id="g13">13</div>
+    <div class="grid-item" id="g14">14</div>
+    <div class="grid-item" id="g15">15</div>
+    <div class="grid-item" id="g16">16</div>
+    <div class="grid-item" id="g17">17</div>
+    <div class="grid-item" id="g18">18</div>
+    <div class="grid-item" id="g19">19</div>
+    <div class="grid-item" id="g20">20</div>
+    <div class="grid-item" id="g21">21</div>
 </div>
 
 
