--- a/230419/index.html
+++ b/230419/index.html
@@ -10,27 +10,46 @@
 <body>
     
 <div id="container">
-    <div class="grid-item" id="g1">link</div>
-    <div class="grid-item" id="g2">link2</div>
-    <div class="grid-item" id="g3">link3</div>
-    <div class="grid-item" id="g4">link4</div>
-    <div class="grid-item" id="g5">link5</div>
+    <div class="grid-item" id="g1"><a href="#">link1</a></div>
+    <div class="grid-item" id="g2"><a href="#">link2</a></div>
+    <div class="grid-item" id="g3"><a href="#">link3</a></div>
+    <div class="grid-item" id="g4"><a href="#">link4</a></div>
+    <div class="grid-item" id="g5"><a href="#">link5</a></div>
     <div class="grid-item" id="g6">tlo obrazkowe</div>
     <div class="grid-item" id="g7">art1</div>
     <div class="grid-item" id="g8">art2</div>
     <div class="grid-item" id="g9">art3</div>
-    <div class="grid-item" id="g10">10</div>
-    <div class="grid-item" id="g11">11</div>
-    <div class="grid-item" id="g12">12</div>
-    <div class="grid-item" id="g13">13</div>
-    <div class="grid-item" id="g14">14</div>
-    <div class="grid-item" id="g15">15</div>
-    <div class="grid-item" id="g16">16</div>
-    <div class="grid-item" id="g17">17</div>
-    <div class="grid-item" id="g18">18</div>
-    <div class="grid-item" id="g19">19</div>
-    <div class="grid-item" id="g20">20</div>
-    <div class="grid-item" id="g21">21</div>
+    <div class="grid-item" id="g10" style="background-color: transparent;">
+        <div class="grid-container2">
+            <div class="grid-item" id="a1">do1</div>
+            <div class="grid-item" id="a2">do2</div>
+            <div class="grid-item" id="a3">do3</div>
+            <div class="grid-item" id="a4">do4</div>
+            <div class="grid-item" id="a5">do5</div>
+            <div class="grid-item" id="a6">do6</div>
+        </div>
+    </div>
+    <div class="grid-item" id="g11">art4</div>
+    <div class="grid-item" id="g12">art5</div>
+    <div class="grid-item" id="g13">Kontakt:
+    <ul>
+        <li>Grzegorz Brzęczyszczykiewicz</li>
+        <li>Tel: 123456789</li>
+        <li>Sienkiewicza 32, Choroszcz</li>
+    </ul>
+    </div>
+    <div class="grid-item" id="g14">
+        <div class="g14-left">
+        <p>Logowanie</p>
+        <ul>
+        <li>Login: <input type="login"></li>
+        <li>Hasło: <input type="password"></li>
+        </ul>
+        </div>
+        <button>Zaloguj się</button>
+
+    </div>
+
 </div>
 
 
