--- a/230419/index.html
+++ b/230419/index.html
@@ -15,18 +15,18 @@
     <div class="grid-item" id="g3"><a href="#">link3</a></div>
     <div class="grid-item" id="g4"><a href="#">link4</a></div>
     <div class="grid-item" id="g5"><a href="#">link5</a></div>
-    <div class="grid-item" id="g6">tlo obrazkowe</div>
+    <div class="grid-item" id="g6"></div>
     <div class="grid-item" id="g7">art1</div>
     <div class="grid-item" id="g8">art2</div>
     <div class="grid-item" id="g9">art3</div>
-    <div class="grid-item" id="g10" style="background-color: transparent;">
+    <div class="grid-item" id="g10">
         <div class="grid-container2">
-            <div class="grid-item" id="a1">do1</div>
-            <div class="grid-item" id="a2">do2</div>
-            <div class="grid-item" id="a3">do3</div>
-            <div class="grid-item" id="a4">do4</div>
-            <div class="grid-item" id="a5">do5</div>
-            <div class="grid-item" id="a6">do6</div>
+            <div class="grid-item" id="a1"></div>
+            <div class="grid-item" id="a2"></div>
+            <div class="grid-item" id="a3"></div>
+            <div class="grid-item" id="a4"></div>
+            <div class="grid-item" id="a5"></div>
+            <div class="grid-item" id="a6"></div>
         </div>
     </div>
     <div class="grid-item" id="g11">art4</div>
