--- a/230419/index.html
+++ b/230419/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,51 +8,64 @@
     <title>19.04.23</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
-<div id="container">
-    <div class="grid-item" id="g1"><a href="#">link1</a></div>
-    <div class="grid-item" id="g2"><a href="#">link2</a></div>
-    <div class="grid-item" id="g3"><a href="#">link3</a></div>
-    <div class="grid-item" id="g4"><a href="#">link4</a></div>
-    <div class="grid-item" id="g5"><a href="#">link5</a></div>
-    <div class="grid-item" id="g6"></div>
-    <div class="grid-item" id="g7">art1</div>
-    <div class="grid-item" id="g8">art2</div>
-    <div class="grid-item" id="g9">art3</div>
-    <div class="grid-item" id="g10">
-        <div class="grid-container2">
-            <div class="grid-item" id="a1"></div>
-            <div class="grid-item" id="a2"></div>
-            <div class="grid-item" id="a3"></div>
-            <div class="grid-item" id="a4"></div>
-            <div class="grid-item" id="a5"></div>
-            <div class="grid-item" id="a6"></div>
+
+    <div id="container">
+        <div class="grid-item" id="g1"><a href="#">link1</a></div>
+        <div class="grid-item" id="g2"><a href="#">link2</a></div>
+        <div class="grid-item" id="g3"><a href="#">link3</a></div>
+        <div class="grid-item" id="g4"><a href="#">link4</a></div>
+        <div class="grid-item" id="g5"><a href="#">link5</a></div>
+        <div class="grid-item" id="g6"></div>
+        <div class="grid-item" id="g7"><a
+                href="https://www.pudelek.pl/roksana-wegiel-pedzi-na-wywiad-do-dzien-dobry-tvn-w-lawendowym-garniturze-dobrze-jej-w-nowym-uczesaniu-zdjecia-6890114160724576g"
+                target="blank">Art1</a>
         </div>
-    </div>
-    <div class="grid-item" id="g11">art4</div>
-    <div class="grid-item" id="g12">art5</div>
-    <div class="grid-item" id="g13">Kontakt:
-    <ul>
-        <li>Grzegorz Brzęczyszczykiewicz</li>
-        <li>Tel: 123456789</li>
-        <li>Sienkiewicza 32, Choroszcz</li>
-    </ul>
-    </div>
-    <div class="grid-item" id="g14">
-        <div class="g14-left">
-        <p>Logowanie</p>
-        <ul>
-        <li>Login: <input type="login"></li>
-        <li>Hasło: <input type="password"></li>
-        </ul>
+        <div class="grid-item" id="g8"><a
+                href="https://rozrywka.radiozet.pl/plotki/viki-gabor-jest-chora-diagnoza-byla-wielkim-ciosem-mam-lzy-w-oczach"
+                target="blank">Art2</a>
         </div>
-        <button>Zaloguj się</button>
+        <div class="grid-item" id="g9"><a href="https://zloteprzeboje.pl/nowy-teledysk-sanah-podsiadlo-nie-wytrzymal"
+                target="blank">Art3</a></div>
+        <div class="grid-item" id="g10">
+            <div class="grid-container2">
+                <div class="grid-item" id="a1"></div>
+                <div class="grid-item" id="a2"></div>
+                <div class="grid-item" id="a3"></div>
+                <div class="grid-item" id="a4"></div>
+                <div class="grid-item" id="a5"></div>
+                <div class="grid-item" id="a6"></div>
+            </div>
+        </div>
+        <div class="grid-item" id="g11"><a
+                href="https://www.plotek.pl/plotek/7,154063,29689433,fryderyki-2023-zawialow-w-koronkach-wyszkoni-w-pastelach.html"
+                target="blank">Art4</a></div>
+        <div class="grid-item" id="g12"><a
+                href="https://plejada.pl/newsy/natalia-szroeder-nie-wiedziala-kim-jest-quebo-tak-zaczela-sie-ich-milosc/twjnkj8"
+                target="blank">Art5</a></div>
+        <div class="grid-item" id="g13">Kontakt:
+            <ul>
+                <li>Grzegorz Brzęczyszczykiewicz</li>
+                <li>Tel: 123456789</li>
+                <li>Sienkiewicza 32, Choroszcz</li>
+            </ul>
+        </div>
+        <div class="grid-item" id="g14">
+            <div class="g14-left">
+                <p>Logowanie</p>
+                <ul>
+                    <li>Login: <input type="login"></li>
+                    <li>Hasło: <input type="password"></li>
+                </ul>
+            </div>
+            <button>Zaloguj się</button>
+
+        </div>
 
     </div>
-
-</div>
 
 
 </body>
+
 </html>
