--- a/index.html
+++ b/index.html
@@ -238,12 +238,11 @@
     <p>18.04.23</p>
     <p><a href="zip/230418.zip" download>Pobierz</a></p></div> 
 
-    <!-- <div class="gallery">
+    <div class="gallery">
     <a target="_blank" href="230419/index.html">
-    <img src="img/test.webp" loading="lazy"></a>
-    <p>19.04.23</p>
-    <p><a href="zip/230419.zip" download>Pobierz</a></p></div>  -->
-    <!-- brak zip -->
+    <img src="img/230419.webp" loading="lazy"></a>
+    <p>19.04.23 - Strona na ocenę na Gridzie</p>
+    <p><a href="zip/230419.zip" download>Pobierz</a></p></div> 
 
 
 
