--- a/innestrony.html
+++ b/innestrony.html
@@ -297,13 +297,13 @@
     <div class="gallery">
     <a target="_blank" href="innestrony/is55/index.html">
     <img src="img/is55.webp" loading="lazy"></a>
-    <p>IS55 - J*bać kolejówke (Grid)</p>
+    <p>IS55 - Samochody i najmniejsza liczba [PHP]</p>
     <p><a href="zip/is55.zip" download>Pobierz</a></p></div>
 
     <div class="gallery">
     <a target="_blank" href="innestrony/is56/index.html">
     <img src="img/is56.webp" loading="lazy"></a>
-    <p>IS56 - Samochody i najmniejsza liczba [PHP]</p>
+    <p>IS56 - "Kułko i =" - JS</p>
     <p><a href="zip/is56.zip" download>Pobierz</a></p></div>
 
 
