--- a/230419/index.html
+++ b/230419/index.html
@@ -12,38 +12,27 @@
 <body>
 
     <div id="container">
-        <div class="grid-item" id="g1"><a href="#">link1</a></div>
-        <div class="grid-item" id="g2"><a href="#">link2</a></div>
-        <div class="grid-item" id="g3"><a href="#">link3</a></div>
-        <div class="grid-item" id="g4"><a href="#">link4</a></div>
-        <div class="grid-item" id="g5"><a href="#">link5</a></div>
+        <div class="grid-item" id="g1"><a href="img/tpne1.jpg"><img src="img/tpne1.jpg"></a></div>
+        <div class="grid-item" id="g2"><a href="img/tpne2.jpg"><img src="img/tpne2.jpg"></a></div>
+        <div class="grid-item" id="g3"><a href="img/tpne3.jpg"><img src="img/tpne3.jpg"></a></div>
+        <div class="grid-item" id="g4"><a href="img/tpne4.jpg"><img src="img/tpne4.jpg"></a></div>
+        <div class="grid-item" id="g5"><a href="img/tpne5.jpg"><img src="img/tpne5.jpg"></a></div>
         <div class="grid-item" id="g6"></div>
-        <div class="grid-item" id="g7"><a
-                href="https://www.pudelek.pl/roksana-wegiel-pedzi-na-wywiad-do-dzien-dobry-tvn-w-lawendowym-garniturze-dobrze-jej-w-nowym-uczesaniu-zdjecia-6890114160724576g"
-                target="blank">Art1</a>
-        </div>
-        <div class="grid-item" id="g8"><a
-                href="https://rozrywka.radiozet.pl/plotki/viki-gabor-jest-chora-diagnoza-byla-wielkim-ciosem-mam-lzy-w-oczach"
-                target="blank">Art2</a>
-        </div>
-        <div class="grid-item" id="g9"><a href="https://zloteprzeboje.pl/nowy-teledysk-sanah-podsiadlo-nie-wytrzymal"
-                target="blank">Art3</a></div>
+        <div class="grid-item" id="g7"><a href="http://bitly.pl/BYWVw"> <img src="img/pomponik.jpg"></a></div>
+        <div class="grid-item" id="g8"><a href="http://bitly.pl/lgT7j"> <img src="img/nam.jpg" alt=""></a></div>
+        <div class="grid-item" id="g9"><a href="http://bitly.pl/QM6AZ"> <img src="img/pudelek.jpg" alt=""></a></div>
         <div class="grid-item" id="g10">
             <div class="grid-container2">
-                <div class="grid-item" id="a1"></div>
-                <div class="grid-item" id="a2"></div>
-                <div class="grid-item" id="a3"></div>
-                <div class="grid-item" id="a4"></div>
-                <div class="grid-item" id="a5"></div>
-                <div class="grid-item" id="a6"></div>
+                <div class="grid-item" id="a1"><a href="img/do1.png"></a></div>
+                <div class="grid-item" id="a2"><a href="img/do2.png"></a></div>
+                <div class="grid-item" id="a3"><a href="img/do3.png"></a></div>
+                <div class="grid-item" id="a4"><a href="img/do4.png"></a></div>
+                <div class="grid-item" id="a5"><a href="img/do5.png"></a></div>
+                <div class="grid-item" id="a6"><a href="img/do6.png"></a></div>
             </div>
         </div>
-        <div class="grid-item" id="g11"><a
-                href="https://www.plotek.pl/plotek/7,154063,29689433,fryderyki-2023-zawialow-w-koronkach-wyszkoni-w-pastelach.html"
-                target="blank">Art4</a></div>
-        <div class="grid-item" id="g12"><a
-                href="https://plejada.pl/newsy/natalia-szroeder-nie-wiedziala-kim-jest-quebo-tak-zaczela-sie-ich-milosc/twjnkj8"
-                target="blank">Art5</a></div>
+        <div class="grid-item" id="g11"><a href="img/wp.jpg"> <img src="img/wp.jpg" alt=""></a></div>
+        <div class="grid-item" id="g12"><a href="http://bitly.pl/BYWVw"> <img src="img/msn.jpg" alt=""></a></div>
         <div class="grid-item" id="g13">Kontakt:
             <ul>
                 <li>Grzegorz Brzęczyszczykiewicz</li>
