--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
 <h3> &#169; rotkiW285</h3>
 </div>
 
+<div class="gallery">
+    <a target="_blank" href="sp/230530/index.html">
+    <img src="img/test.webp" loading="lazy"></a>
+    <p>30.05.23 - Strona responsywna</p>
+    <p><a href="zip/230530.zip" download>Pobierz</a></p></div>  
+
  <div class="gallery">
     <a target="_blank" href="sp/230522/index.html">
     <img src="img/230522.webp" loading="lazy"></a>
@@ -31,7 +37,7 @@
 <div class="gallery">
     <a target="_blank" href="sp/230419/index.html">
     <img src="img/230419.webp" loading="lazy"></a>
-    <p>19.04.23 - Strona na ocenę na Gridzie</p>
+    <p>19.04.23 - Strona na Gridzie</p>
     <p><a href="zip/230419.zip" download>Pobierz</a></p></div> 
 
 <div class="gallery">
